Fix layout spacing bugs (#258)

--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    padding: 2rem 1.25rem;
+    padding: 1.25rem 0;
 }
 
 .hero--blue {
